Update http -> https, slide

--- a/_posts/2019-06-01-deepsort.md
+++ b/_posts/2019-06-01-deepsort.md
@@ -20,7 +20,7 @@ categories: paper
 # DataSet
 MARS와 MARKET 2개가 있었지만 MARS는 다운로드가 잘안되서.. MARKET으로만 하겠습니다.
 
-- [MARS](http://www.liangzheng.com.cn/Project/project_mars.html)
+- [MARS](https://www.liangzheng.com.cn/Project/project_mars.html)
 - [MARKET](https://jingdongwang2017.github.io/Projects/ReID/Datasets/Market-1501.html)
 
 ---
@@ -440,5 +440,5 @@ def non_max_suppression(boxes, max_bbox_overlap, scores=None):
 ```
 
 # 참조
-- [http://docs.likejazz.com/cosine-sim/](http://docs.likejazz.com/cosine-sim/)
-- [http://www.pyimagesearch.com/2015/02/16/faster-non-maximum-suppression-python/](http://www.pyimagesearch.com/2015/02/16/faster-non-maximum-suppression-python/)
+- [https://docs.likejazz.com/cosine-sim/](https://docs.likejazz.com/cosine-sim/)
+- [https://www.pyimagesearch.com/2015/02/16/faster-non-maximum-suppression-python/](https://www.pyimagesearch.com/2015/02/16/faster-non-maximum-suppression-python/)
