--- a/_posts/2019-06-20-coco_api.md
+++ b/_posts/2019-06-20-coco_api.md
@@ -55,7 +55,7 @@ python setup.py build_ext --inplace
 
 # images와 Annotations 다운로드 받기
 
-- [HERE](http://cocodataset.org/#download)
+- [HERE](https://cocodataset.org/#download)
 
 엄청 오래걸린다.. 저같은 경우는 다운로드가 계속 잘 안되서 리눅스에서 `google cloud service`를 사용해 다운로드 했습니다. 속도가 빠르다는 장점이 있습니다.
 
@@ -68,7 +68,7 @@ gsutil -m rsync gs://images.cocodataset.org/train2017 train2017
 gsutil -m rsync gs://images.cocodataset.org/test2017 test2017
 gsutil -m rsync gs://images.cocodataset.org/val2017 val2017
 gsutil -m rsync gs://images.cocodataset.org/annotations annotations : error!!
-wget -c http://images.cocodataset.org/annotations/annotations_trainval2017.zip
+wget -c https://images.cocodataset.org/annotations/annotations_trainval2017.zip
 ```
 
 이제 한번 만지작 거려봅시다.
@@ -174,4 +174,4 @@ plt.imshow(I); plt.axis('off'); plt.show()
 
 # 참조
 - [https://github.com/cocodataset/cocoapi.git](https://github.com/cocodataset/cocoapi.git)
-- [http://cocodataset.org/#download](http://cocodataset.org/#download)
+- [https://cocodataset.org/#download](https://cocodataset.org/#download)
