--- a/_posts/2019-07-05-coralusb.md
+++ b/_posts/2019-07-05-coralusb.md
@@ -23,7 +23,7 @@ $ pip install PILLOW
 # 라이브러리 설치
 
 ```
-$ wget http://storage.googleapis.com/cloud-iot-edge-pretrained-models/edgetpu_api.tar.gz
+$ wget https://storage.googleapis.com/cloud-iot-edge-pretrained-models/edgetpu_api.tar.gz
 $ tar xzf edgetpu_api.tar.gz
 $ cd python-tflite-source
 ```
