--- a/_posts/2019-12-03-CAM.md
+++ b/_posts/2019-12-03-CAM.md
@@ -12,7 +12,7 @@ math: true
 (Learning Deep Features for Discriminative Localization)
 
 - CAM paper : [Here](https://arxiv.org/abs/1512.04150)
-- Demo : [Here](http://places.csail.mit.edu/demo.html)
+- Demo : [Here](https://places.csail.mit.edu/demo.html)
 
 # Abstract
 - GAP(global average pooling)을 제안하는 논문
@@ -108,7 +108,7 @@ $$S_c = \sum_{x,y} M_c(x,y)$$
 미리학습 시킨 모델이 있다고 가정하고 진행한다. 나는 STL10 데이터셋을 이용해서 미리 학습시켜 놓았다.
 
 - Model : ResNet18
-- Datasets : [STL10](http://ai.stanford.edu/~acoates/stl10/)
+- Datasets : [STL10](https://ai.stanford.edu/~acoates/stl10/)
 
 ```python
 import torch
