--- a/_posts/2021-06-28-today1.md
+++ b/_posts/2021-06-28-today1.md
@@ -14,7 +14,7 @@ categories: news
 일단 대부분 잘 아는 논문 사이트가 많지만 최신 뉴스까지 전부 섭렵하기가 쉬운일이 아니다.. 특히 혼자 공부 하는 경우!
 
 - [Paper with Code](https://paperswithcode.com/)
-- [Arxiv Sanity Paper](http://www.arxiv-sanity.com/)
+- [Arxiv Sanity Paper](https://www.arxiv-sanity.com/)
 - [PR-12](https://www.youtube.com/results?search_query=pr12)
 
 보통 위에 사이트들로 최신 논문 및 근황은 커버가 가능하다.
