Fix post today2, delete tags

--- a/_posts/2021-06-29-today2.md
+++ b/_posts/2021-06-29-today2.md
@@ -9,7 +9,7 @@ categories: news
 ## VOLO: Vision Outlooker for Visual Recognition
 
 - [Github](https://github.com/sail-sg/volo)
-- [Arxiv]()
+- [Arxiv](https://arxiv.org/abs/2106.13112)
 
 Imagenet과 CityScape 데이터셋에서 SOTA를 달성한 새로운 논문이 나왔습니다.
 
