Update categories, replicate post

--- a/_posts/2019-03-08-NCS2.md
+++ b/_posts/2019-03-08-NCS2.md
@@ -3,8 +3,9 @@ layout: post
 title:  "NCS 2"
 summary: "인텔의 뉴럴 컴퓨트 스틱 2 설정 in raspberry pi"
 date:   2019-03-08 13:00 -0400
-categories: pi
+categories: review
 ---
+
 본문서는 [이곳](https://software.intel.com/en-us/articles/OpenVINO-Install-RaspberryPI)을 읽어보면서 정리한 문서입니다.
 
 # Dependency
