--- a/_posts/2019-03-13-Django.md
+++ b/_posts/2019-03-13-Django.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Django"
 summary: "Django 간단하게 실행시켜보기"
 date:   2019-03-13 22:00 -0400
-categories: web
+categories: opensource
 ---
 
 [이 곳](https://tutorial.djangogirls.org/)을 보며 정리한 포스트 입니다.
