--- a/_posts/2019-03-14-index.md
+++ b/_posts/2019-03-14-index.md
@@ -3,7 +3,7 @@ layout: post
 title:  "regression 모델 평가"
 summary: "regression 모델을 평가하는 오류 지표"
 date:   2019-03-14 22:00 -0400
-categories: dnn
+categories: concept
 ---
 
 # 평가 지표
