--- a/_posts/2019-03-15-NCS2_IR.md
+++ b/_posts/2019-03-15-NCS2_IR.md
@@ -3,7 +3,7 @@ layout: post
 title:  "NCS 2 자기 모델 변환하기"
 summary: "pb파일을 만들고 추론에 필요한 .xml .bin 파일 만들기"
 date:   2019-03-08 13:00 -0400
-categories: pi
+categories: edge
 ---
 
 # 원리
