--- a/_posts/2019-03-22-Docker.md
+++ b/_posts/2019-03-22-Docker.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Docker[Online Judge]"
 summary: "Docker 설치하고 온라인 저지 실행시키기"
 date:   2019-03-22 18:00 -0400
-categories: capston
+categories: opensource
 ---
 
 # docker
