--- a/_posts/2019-12-31-latex.md
+++ b/_posts/2019-12-31-latex.md
@@ -3,7 +3,7 @@ layout: post
 title:  "LaTex Log"
 summary: "Window에서 TeXlive, Texstudio 설치하기, Beamer 문법"
 date:   2019-12-31 09:10 -0400
-categories: log
+categories: concept
 ---
 
 # LaTex 사용하기
