--- a/_posts/2020-01-08-datasets.md
+++ b/_posts/2020-01-08-datasets.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Image Classification Datasets"
 summary: "이미지 분류 데이터셋"
 date:   2020-01-07 16:00 -0400
-categories: deeplearning
+categories: dataset
 ---
 
 # 이미지 분류 데이터셋
