--- a/_posts/2020-06-12-DI.md
+++ b/_posts/2020-06-12-DI.md
@@ -2,7 +2,7 @@
 title:  "Dependancy Injection"
 summary: "의존성 주입"
 date:   2020-06-13 09:10 -0400
-categories: engineer
+categories: concept
 ---
 
 # Dependancy Injection
