--- a/_posts/2020-11-24-tx2.md
+++ b/_posts/2020-11-24-tx2.md
@@ -2,7 +2,7 @@
 title:  "tx2를 사용하여 Pytorch 설치 및 실행하기"
 summary: "tx2를 사용하여 Pytorch 설치 및 실행하기"
 date:   2020-11-24 09:10 -0400
-categories: tx2
+categories: edge
 ---
 
 # tx2
