--- a/_posts/2021-03-30-gpus.md
+++ b/_posts/2021-03-30-gpus.md
@@ -2,7 +2,7 @@
 title:  "Pytorch Multi GPU 잘써보자"
 summary: "Pytorch GPU와 관련 된 모든 것..?"
 date:   2021-03-30 09:10 -0400
-categories: pytorch
+categories: opensource
 ---
 
 # Pytorch Multi GPU
