--- a/_posts/2021-04-13-python.md
+++ b/_posts/2021-04-13-python.md
@@ -2,7 +2,7 @@
 title:  "Python 잘써보기"
 summary: "파이썬을 여행하는 히치하이커를 위한 안내서"
 date:   2021-04-13 09:10 -0400
-categories: pytorch
+categories: review
 ---
 
 > Lift is Short, You need Python
