--- a/_posts/2019-03-06-SVM.md
+++ b/_posts/2019-03-06-SVM.md
@@ -3,7 +3,7 @@ layout: post
 title:  "SVM"
 summary: "Support vector machine"
 date:   2019-03-06 22:00 -0400
-categories: ml
+categories: concept
 ---
 
 # SVM
