--- a/_posts/2019-03-29-Django2.md
+++ b/_posts/2019-03-29-Django2.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Django 배포하기"
 summary: "Django를 배포해보자"
 date:   2019-03-29 22:00 -0400
-categories: web
+categories: opensource
 ---
 
 # Dependency
