--- a/_posts/2019-04-21-kalman.md
+++ b/_posts/2019-04-21-kalman.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Kalman Filter"
 summary: "Kalman Filter란 무엇인가?"
 date:   2019-04-23 12:00 -0400
-categories: kalman
+categories: concept
 ---
 
 # Kalman Filter
