--- a/_posts/2019-06-20-coco_api.md
+++ b/_posts/2019-06-20-coco_api.md
@@ -3,7 +3,7 @@ layout: post
 title:  "COCO API 사용하기"
 summary: "python에서 COCO API를 사용해보자"
 date:   2019-06-20 12:00 -0400
-categories: info
+categories: opensource
 ---
 
 # API
