--- a/_posts/2019-08-03-ros.md
+++ b/_posts/2019-08-03-ros.md
@@ -3,7 +3,7 @@ layout: post
 title:  "ROS"
 summary: "ROS 설치/실행"
 date:   2019-08-03 12:00 -0400
-categories: contest
+categories: edge
 ---
 
 # Dependency
