--- a/_posts/2019-12-06-kaggle1.md
+++ b/_posts/2019-12-06-kaggle1.md
@@ -3,7 +3,7 @@ layout: post
 title:  "케라스 딥러닝을 이용해서 의료 이미지 분류하기"
 summary: "kaggle medical image classification using deep learning"
 date:   2019-12-05 13:00 -0400
-categories: kaggle
+categories: review
 use_math: true
 ---
 
