--- a/_posts/2021-02-04-ssh.md
+++ b/_posts/2021-02-04-ssh.md
@@ -3,7 +3,7 @@ layout: post
 title:  "SSH"
 summary: "SSH"
 date:   2021-02-04 12:00 -0400
-categories: linux
+categories: concept
 ---
 
 1. config 파일을 ~/.ssh경로에 생성
