--- a/_posts/2021-05-22-jax.md
+++ b/_posts/2021-05-22-jax.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Google JAX 라이브러리란?"
 summary: "Google JAX 라이브러리란?"
 date:   2021-05-22 09:10 -0400
-categories: library
+categories: opensource
 ---
 
 # JAX
