--- a/_posts/2021-06-26-vscode.md
+++ b/_posts/2021-06-26-vscode.md
@@ -3,7 +3,7 @@ layout: post
 title:  "딥러닝 프로젝트를 위한 VSCode"
 summary: "딥러닝 프로젝트를 위한 VSCode"
 date:   2021-06-26 09:10 -0400
-categories: pytorch
+categories: review
 ---
 
 
