--- a/_posts/2021-08-09-tts.md
+++ b/_posts/2021-08-09-tts.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Text to Speech"
 summary: "Tacotron2 + WaveNet"
 date:   2021-08-05 09:10 -0400
-categories: news
+categories: opensource
 math: true
 ---
 
