--- a/_posts/2021-11-23-openpose.md
+++ b/_posts/2021-11-23-openpose.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Openpose 설치기"
 summary: "openpose를 설치하여 Python API를 사용하기 위한 여정"
 date:   2021-11-13 09:10 -0400
-categories: python
+categories: opensource
 ---
 
 # 주의사항
