--- a/_posts/2024-02-13-Fooocus.md
+++ b/_posts/2024-02-13-Fooocus.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Fooocus 사용법"
+title:  "Fooocus 사용법 [진행중]"
 summary: "새로운 Diffusion 프레임워크 Fooocus"
 date:   2024-02-13 16:00 -0400
 categories: review
