Update video post

--- a/_posts/2024-02-14-Video.md
+++ b/_posts/2024-02-14-Video.md
@@ -19,10 +19,91 @@ math: true
 
 비디오 요약은 긴 비디오를 짧은 클립으로 만드는 과정이다. 이는 원본 비디오의 주요한 부분들만을 추려내는 것을 포함하며, 이를 통해 사용자는 시간을 절약하면서도 비디오의 주요 내용을 파악할 수 있다. 비디오 요약을 위해서는 딥러닝 기반의 접근법이 널리 사용되며, 이에는 LSTM, CNN 등이 사용된다.
 
-
 ### 비디오 처리
 
 비디오 처리는 비디오에서 특정 정보를 추출하거나, 비디오의 특성을 변경하는 등의 작업을 포함한다. 이에는 비디오의 프레임 레이트 변경, 해상도 조절, 색상 보정 등이 포함되며, 이 외에도 객체 인식, 움직임 감지 등의 작업을 수행하기도 한다. 비디오 처리를 위해서는 OpenCV와 같은 라이브러리가 널리 사용되며, 딥러닝 기반의 방법론도 사용된다.
 
+---
+
+## 비디오에서 텍스트 추출하기
+비디오 처리의 한 분야로, 비디오에서 텍스트를 추출하는 것이 있다. 이는 자막, 사인, 또는 화면에 나타나는 다른 텍스트 정보를 읽어내는 데 사용될 수 있다. 이를 위해 Python의 EasyOCR 라이브러리를 사용할 수 있다.
+
+### EasyOCR 라이브러리란?
+EasyOCR은 이미지 또는 비디오에서 텍스트를 인식하기 위한 파이썬 라이브러리다. 딥러닝을 기반으로 하며, 80개가 넘는 언어를 지원한다. EasyOCR은 PyTorch 프레임워크를 기반으로 하며, GPU를 지원하여 빠른 처리 속도를 가진다.
+
+### 비디오에서 EasyOCR 사용하기
+비디오에서 텍스트를 추출하는 과정은 다음과 같다:
+
+1. 비디오를 프레임으로 분리: OpenCV 라이브러리를 사용하여 비디오를 개별 프레임으로 분리한다.
+2. 텍스트 인식: 각 프레임에 대해 EasyOCR를 사용하여 텍스트를 추출한다.
+3. 결과 저장: 추출한 텍스트를 저장하거나 다른 처리를 수행한다.
+
+다음은 이를 수행하는 간단한 파이썬 코드의 예이다:
+
+```python
+import cv2
+import easyocr
+
+# 비디오 로드
+cap = cv2.VideoCapture('video.mp4')
+
+# EasyOCR Reader 객체 생성
+reader = easyocr.Reader(['en'])
+
+while(cap.isOpened()):
+    # 비디오의 각 프레임 읽기
+    ret, frame = cap.read()
+    if ret == True:
+        # 텍스트 인식
+        result = reader.readtext(frame)
+        # 결과 출력
+        for (bbox, text, prob) in result:
+            print(f'Text: {text}, Probability: {prob}')
+    else:
+        break
+
+# 비디오 해제
+cap.release()
+```
+
+### Tesseract 라이브러리란?
+Tesseract는 구글에서 개발한 오픈 소스 OCR 엔진으로, 이미지에서 텍스트를 인식하는 데 사용된다. Tesseract는 100개 이상의 언어를 지원하며, Python에서는 pytesseract라는 라이브러리를 통해 사용할 수 있다.
+
+### 비디오에서 Tesseract 사용하기
+비디오에서 텍스트를 추출하는 과정은 다음과 같다:
+
+비디오를 프레임으로 분리: OpenCV 라이브러리를 사용하여 비디오를 개별 프레임으로 분리한다.
+텍스트 인식: 각 프레임에 대해 Tesseract를 사용하여 텍스트를 추출한다.
+결과 저장: 추출한 텍스트를 저장하거나 다른 처리를 수행한다.
+
+```python
+import cv2
+import pytesseract
+
+# 비디오 로드
+cap = cv2.VideoCapture('video.mp4')
+
+while(cap.isOpened()):
+    # 비디오의 각 프레임 읽기
+    ret, frame = cap.read()
+    if ret == True:
+        # 텍스트 인식
+        result = pytesseract.image_to_string(frame)
+        # 결과 출력
+        print(result)
+    else:
+        break
+
+# 비디오 해제
+cap.release()
+```
 
 ---
+
+#### 사용 후기
+
+**EasyOCR**
+성능 면에서는 매우 만족스러웠다. 특히 다양한 언어와 복잡한 배경에서도 텍스트를 잘 인식하는 능력이 탁월했다. 그러나 GPU를 활용하는 만큼 처리 속도 면에서는 다소 느린 편이었다. 따라서 복잡한 이미지에서 텍스트를 검출할 때는 EasyOCR을 추천한다.
+
+**Tesseract**
+EasyOCR에 비해 텍스트 인식 성능이 다소 떨어지는 경향이 있었다. 특히 복잡한 배경이나 다양한 언어에서는 인식률이 떨어질 수 있다. 그럼에도 불구하고, 단순한 이미지에서 텍스트를 검출하는 경우에는 Tesseract를 활용하는 것이 좋다.
