--- a/_posts/2024-02-14-Video.md
+++ b/_posts/2024-02-14-Video.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "비디오를 처리하는 방법 [진행중]"
+title:  "비디오를 처리하는 방법"
 summary: "Python으로 비디오를 다양하게 처리하는 방법"
 date:   2024-02-14 16:00 -0400
 categories: review
