Update blog - face

--- a/_posts/2019-02-28-cycleGAN.md
+++ b/_posts/2019-02-28-cycleGAN.md
@@ -1,74 +1,18 @@
 ---
 layout: post
-title:  "cycleGAN-tensorflow"
-summary: "cycleGAN 구현하기"
+title:  "CycleGAN 끄적이기"
+summary: "CycleGAN 코드 살펴보기"
 date:   2019-02-28 09:00 -0400
 categories: gan
 ---
-[깃허브](https://github.com/jjxxmiin/my_gan/tree/master/cyclegan)
-
-# requirement
-- python 3
-- scipy
-- numpy
-- tqdm
-- tensorflow
-
----
-
-# dataset
-- [https://people.eecs.berkeley.edu/~taesung_park/CycleGAN/datasets/](https://people.eecs.berkeley.edu/~taesung_park/CycleGAN/datasets/)
-
----
-
-# File
-- ops
-- utils
-- CycleGAN
-- train
-
----
-
-# 개념
-## Residual block
-- skip connection과 비슷하다.
-- ResNet
-
-```
-x -> conv -> norm -> relu -> conv -> norm -> y
-return x + y
-```
-
-## instance normalization
-
-
-
-![input_norm](/assets/img/post_img/cyclegan/instance_norm.PNG)
-
-
-
-- **채널단위** 로 normalization
-
-## LSGAN
-loss 함수의 차이
-- 기존 : sigmoid cross entropy loss function
-  + -> discriminator를 속이기만 하면 된다.
-- **LSGAN** : least square loss function
-  + -> real input data와 근접해야 한다.
-
-## auto encoder
-비감독학습(UnSupervised learning) 데이터의 특징(흥미로운 구조)을 발견하기 위함
-- 입력을 압축하고 재구성한다.
-- 주관적으로 중요한 정보들을 최대한 보존하는 것을 목표로 하며, 이를 위해 사람들이 잘 느끼지 못하거나 둔감한 정보는 손실시킨다.
-
-## identity loss
-이것은 X에서 Y'로 Y에서 X'로 generate를 할 때 Loss에다가 Y'에서 Y로 X'에서 X로 가는 Mapping Function의 Loss를 추가한 것이다.
-- X',Y'의 특징을 유의미하게 만든다.
-
----
 
 # CycleGAN
-- **Unpaired** Image-to-Image Translation using Cycle-Consistent Adversarial Networks
+
+여러분이 이미지 변환에 관심이 있으시다면, CycleGAN이라는 기술을 한 번 들어보셨을 것입니다. CycleGAN은 이미지 변환에 대한 최신 연구 중 하나로, 특히 두 개의 이미지 집합 사이에서 스타일을 변환하는 데 사용됩니다. 이 포스트에서는 CycleGAN의 주요 개념과 작동 방식에 대해 설명하고, Python과 TensorFlow를 사용하여 CycleGAN을 구현하는 방법을 소개하겠습니다.
+
+## CycleGAN이란?
+
+CycleGAN은 Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks의 약자로, 서로 상응하는 훈련 예제가 없는 두 이미지 도메인 간의 스타일 변환을 가능하게 하는 기술입니다. 예를 들어, 여름 풍경 사진을 겨울 풍경 사진으로 바꾸는 것과 같은 작업을 수행할 수 있습니다.
 
 
 
@@ -76,7 +20,61 @@ loss 함수의 차이
 
 
 
-## hyperparameter
+## CycleGAN의 주요 개념
+
+CycleGAN은 여러 가지 중요한 개념을 사용합니다:
+
+- Residual blocks : Residual block은 입력을 직접 출력에 더하는 'skip connection'과 비슷한 개념입니다. 이는 네트워크가 학습해야 하는 함수의 복잡성을 줄이고, 따라서 학습 속도를 높이는데 도움이 됩니다.
+
+```
+x -> conv -> norm -> relu -> conv -> norm -> y
+return x + y
+```
+
+- Instance normalization : Instance normalization은 각 피처 맵의 채널별로 정규화를 수행하는 방법입니다. 이는 네트워크가 배치 사이즈에 의존하지 않고 안정적으로 학습될 수 있게 합니다.
+
+
+
+![input_norm](/assets/img/post_img/cyclegan/instance_norm.PNG)
+
+
+
+- LSGAN (Least Squares GAN) : LSGAN은 기존의 sigmoid cross entropy loss function 대신 least square loss function을 사용하는 GAN입니다. 이는 생성된 이미지가 실제 이미지와 더 가깝게 만들어질 수 있도록 돕습니다.
+
+- Autoencoder : Autoencoder는 입력 데이터의 특징을 학습하고 재구성하는 비감독학습 모델입니다. 이는 복잡한 데이터의 특징을 추출하고 이를 이용해 새로운 데이터를 생성하는 데 유용합니다.
+
+- Identity loss : Identity loss는 CycleGAN의 핵심 개념 중 하나로, 입력 이미지를 동일한 이미지로 재구성하는 능력을 측정하는 손실 함수입니다. 이는 네트워크가 입력과 출력 사이의 일관성을 유지하도록 돕습니다.
+
+
+## CycleGAN 구현하기
+
+CycleGAN을 구현하는 코드는 [여기](https://github.com/jjxxmiin/my_gan/tree/master/cyclegan)에서 확인하실 수 있습니다.
+
+### 요구사항
+
+위에 코드를 실행하려면 CycleGAN을 구현하려면 다음과 같은 요구사항이 필요합니다
+
+- python 3
+- scipy
+- numpy
+- tqdm
+- tensorflow
+
+### 데이터셋
+
+- 데이터셋은 [Berkeley에서 제공하는 CycleGAN 데이터셋](https://people.eecs.berkeley.edu/~taesung_park/CycleGAN/datasets/)을 사용할 수 있습니다.
+
+### 코드구조
+
+CycleGAN의 코드 구조는 다음과 같습니다:
+
+- ops : Tensorflow 연산에 대한 유틸리티 함수들이 들어있습니다.
+- utils : 이미지 로딩, 저장 등에 관련된 유틸리티 함수들이 들어있습니다.
+- CycleGAN : CycleGAN 모델의 핵심 코드가 들어있습니다.
+- train : 훈련 과정을 제어하는 코드가 들어있습니다.
+
+### 하이퍼파라미터
+
 ```python
 img_ch = 3
 img_size = 256
@@ -92,89 +90,15 @@ iteration = 100000
 batch_size = 1
 ```
 
-- loss함수에 gan_w,cycle_w,identity_w를 각각 곱해주었다.
-- cycle -> identity -> gan 순서로 feature의 중요도를 잡아주었다.
+### 손실함수
 
-## generate
-- conv 7x7
-  - instance_norm
-  - relu
+- **L1**
 
----
-
-- conv 3x3
-  - instance_norm
-  - relu
-
----
-
-- conv 3x3
-  - instance_norm
-  - relu
-
----
-
-- residual block
-- residual block
-- residual block
-- residual block
-- residual block
-- residual block
-
----
-
-- conv_transpose 3x3
-  - instance_norm
-  - relu
-
----
-
-- conv_transpose 3x3
-  - instance_norm
-  - relu
-
----
-
-- conv 7x7
-  - tanh
-
-## discriminate
-- conv 4x4
-  - leaky_relu
-
----
-
-- conv 4x4
-  - instance_norm
-  - leaky_relu
-
----
-
-- conv 4x4
-  - instance_norm
-  - leaky_relu
-
----
-
-- conv 4x4
-  - instance_norm
-  - leaky_relu
-
----
-
-- conv 4x4
-
-**LSGAN LOSS를 이용하기 때문에 sigmoid를 쓸 필요없다.**
-
-
-## loss
-- L1
-
-```
+```python
 loss = tf.reduce_mean(tf.abs(x - y))
 ```
 
-- G_LOSS
+- **G_LOSS**
 
 ```python
 #LSGAN
@@ -183,7 +107,7 @@ fake_cost = tf.reduce_mean(tf.squared_difference(fake, 1.0))
 return fake_cost
 ```
 
-- D_LOSS
+- **D_LOSS**
 
 ```python
 #LSGAN
@@ -193,7 +117,7 @@ fake_cost = tf.reduce_mean(tf.square(fake))
 return real_cost + fake_cost
 ```
 
-- LOSS
+- **LOSS**
 
 ```python
 # loss
@@ -231,13 +155,6 @@ D_loss = D_loss_A + D_loss_B
 
 ```
 
----
+### 결론
 
-# 참조
-- [https://www.slideshare.net/NaverEngineering/1-gangenerative-adversarial-network](https://www.slideshare.net/NaverEngineering/1-gangenerative-adversarial-network)
-- [https://www.kwangsiklee.com/2018/03/cyclegan%EC%9D%B4-%EB%AC%B4%EC%97%87%EC%9D%B8%EC%A7%80-%EC%95%8C%EC%95%84%EB%B3%B4%EC%9E%90/](https://www.kwangsiklee.com/2018/03/cyclegan%EC%9D%B4-%EB%AC%B4%EC%97%87%EC%9D%B8%EC%A7%80-%EC%95%8C%EC%95%84%EB%B3%B4%EC%9E%90/)
-- [https://github.com/taki0112/CycleGAN-Tensorflow](https://github.com/taki0112/CycleGAN-Tensorflow)
-- [https://artoria.us/22](https://artoria.us/22)
-- [https://jaejunyoo.blogspot.com/2017/04/lsgan-2.html](https://jaejunyoo.blogspot.com/2017/04/lsgan-2.html)
-- [https://blog.lunit.io/2018/04/12/group-normalization/](https://blog.lunit.io/2018/04/12/group-normalization/)
-- [https://m.blog.naver.com/laonple/220793640991](https://m.blog.naver.com/laonple/220793640991)
+CycleGAN은 이미지 변환 분야에서 흥미로운 결과를 보여주는 기술입니다. 이 포스트에서는 CycleGAN의 주요 개념과 Python을 사용한 구현 방법에 대해 설명했습니다. 이미지 변환에 관심이 있는 분들에게는 CycleGAN이 흥미로운 주제가 될 것입니다.
