--- a/_posts/2019-04-27-sort.md
+++ b/_posts/2019-04-27-sort.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "SORT(SIMPLE ONLINE AND REALTIME TRACKING)"
-summary: "SORT 논문,코드 읽어보기"
+title:  "SORT 톺아보기"
+summary: "SORT(SIMPLE ONLINE AND REALTIME TRACKING) 논문,코드 읽어보기"
 date:   2019-04-25 12:00 -0400
 categories: paper
 ---
