--- a/_posts/2019-06-20-COCOAPI.md
+++ b/_posts/2019-06-20-COCOAPI.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "COCO API 사용하기"
-summary: "python에서 COCO API를 사용해보자"
+title:  "COCO API 끄적이기"
+summary: "COCO API를 사용해보자"
 date:   2019-06-20 12:00 -0400
 categories: opensource
 ---
