--- a/_posts/2019-12-06-kaggle1.md
+++ b/_posts/2019-12-06-kaggle1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "케라스 딥러닝을 이용해서 의료 이미지 분류하기"
-summary: "kaggle medical image classification using deep learning"
+title:  "Kaggle 끄적이기 (의료 이미지)"
+summary: "Kaggle에서 Keras 프레임워크로 의료 이미지 분류하기"
 date:   2019-12-05 13:00 -0400
 categories: review
 use_math: true
