--- a/_posts/2019-12-10-gradCAM.md
+++ b/_posts/2019-12-10-gradCAM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Grad CAM"
+title:  "Grad CAM 톺아보기"
 summary: "Grad CAM 논문 읽어보기"
 date:   2019-12-09 13:00 -0400
 categories: paper
