--- a/_posts/2020-11-23-FaceNet.md
+++ b/_posts/2020-11-23-FaceNet.md
@@ -1,6 +1,6 @@
 ---
-title:  "FaceNet"
-summary: "FaceNet"
+title:  "FaceNet 톺아보기"
+summary: "FaceNet 톺아보기"
 date:   2020-11-23 09:10 -0400
 categories: paper
 math: true
