--- a/_posts/2021-05-22-jax.md
+++ b/_posts/2021-05-22-jax.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Google JAX 라이브러리란?"
+title:  "Google JAX 끄적이기"
 summary: "Google JAX 라이브러리란?"
 date:   2021-05-22 09:10 -0400
 categories: opensource
