--- a/_posts/2021-06-21-celebA.md
+++ b/_posts/2021-06-21-celebA.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "CelebA 데이터셋 다운로드하기"
-summary: "CelebA Dataset Download"
+title:  "CelebA 데이터셋 다운로드 하는법"
+summary: "CelebA Dataset 다운로드 하는법"
 date:   2021-06-21 09:10 -0400
 categories: dataset
 ---
