--- a/_posts/2021-08-09-tts.md
+++ b/_posts/2021-08-09-tts.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Text to Speech"
+title:  "Text to Speech 끄적이기"
 summary: "Tacotron2 + WaveNet"
 date:   2021-08-05 09:10 -0400
 categories: opensource
