--- a/_posts/2022-01-13-stylegan.md
+++ b/_posts/2022-01-13-stylegan.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "StyleGAN"
+title:  "StyleGAN 톺아보기"
 summary: "StyleGANv1, StyleGANv2, StyleGANv3"
 date:   2022-01-13 09:10 -0400
 categories: gan
