--- a/_posts/2019-04-20-YOLOv2.md
+++ b/_posts/2019-04-20-YOLOv2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "YOLOv2,YOLO 9000"
+title:  "YOLOv2,YOLO 9000 톺아보기"
 summary: "YOLO 9000 논문 읽어보기"
 date:   2019-04-20 13:00 -0400
 categories: paper
