--- a/_posts/2019-05-05-Django2.md
+++ b/_posts/2019-05-05-Django2.md
@@ -1,38 +1,32 @@
 ---
 layout: post
-title:  "Django 분석하기"
-summary: "Django 분석하기"
+title:  "Django 끄적이기 2"
+summary: "Django 튜토리얼"
 date:   2019-05-16 12:00 -0400
 categories: opensource
 ---
 
-# Django를 제대로 알아보자
+# Django: 웹 개발의 핵심 이해하기
+Django는 Python을 이용한 웹 개발 프레임워크로, 개발자가 데이터베이스 기반 웹사이트를 빠르고 효율적으로 개발할 수 있게 도와줍니다. Django의 핵심 구조는 MVC(Model-View-Controller) 패턴을 기반으로 합니다.
 
-MVC 패턴이다.
+### MVC 패턴
+- Model: models.py를 정의하여 데이터베이스 구조를 생성합니다.
+- View: templates를 이용하여 사용자에게 보여줄 화면을 결정합니다.
+- Controller: views.py에서 데이터를 처리하고, 결과를 템플릿에 전달합니다.
 
-1. model : models.py를 정의해서 db 구조를 만든다.
-2. view : templetes 로 어떤 화면을 보여줄지 결정한다.
-3. controller - views.py 에서 데이터를 읽어, index.html에 전달
+### Django의 주요 구성 요소
+- models.py: 데이터베이스 테이블 구조를 정의합니다.
+- admin.py: 관리자 페이지를 정의합니다.
+- views.py: 애플리케이션의 비즈니스 로직을 구현합니다.
+- templates: 사용자 인터페이스를 정의하는 HTML 파일을 저장합니다.
+- settings.py: 프로젝트의 전반적인 설정을 담당합니다.
 
-
-## Table
-- models.py
-- admin.py
-
-## 어플리케이션 Logic
-- views.py
-
-## 화면 UI
-- templates/app/<name>.html
-
----
-
-## settings.py
-- 프로젝트 설정 파일
+### settings.py
+Django 프로젝트의 설정을 담당하는 파일로, 데이터베이스, 템플릿, 정적 파일 등의 설정을 포함합니다.
 
 1. db 설정(mysql 기준)
 
-```
+```python
 DATABASES = {
     'default': {
         'ENGINE' : 'django.db.backends.mysql',
@@ -47,7 +41,7 @@ DATABASES = {
 
 2. templates 설정
 
-```
+```python
 TEMPLATES = [
     {
         'BACKEND': 'django.template.backends.django.DjangoTemplates',
@@ -69,14 +63,14 @@ TEMPLATES = [
 
 3. static 설정
 
-```
+```python
 STATIC_URL = '/static/'
 STATIC_ROOT = os.path.join(BASE_DIR, 'static')
 ```
 
 4. APP 등록
 
-```
+```python
 INSTALLED_APPS = [
     'django.contrib.admin',
     'django.contrib.auth',
@@ -92,43 +86,28 @@ INSTALLED_APPS = [
 
 5. 시간 설정
 
-```
+```python
 LANGUAGE_CODE = 'ko-kr'
 
 TIME_ZONE = 'Asia/Seoul'
 ```
 
----
+### models.py
+데이터베이스 테이블 구조를 클래스 형태로 정의하는 파일로, Django는 ORM(Object Relational Mapping) 기법을 사용하여 클래스의 CRUD(Create, Read, Update, Delete) 연산이 데이터베이스에 자동으로 반영되도록 합니다.
 
-## models.py
-- ORM(Object Relation Mapping) 기법을 사용한다. 즉, 클래스 객체에서 CRUD(Create,Read,Update,Delete)를 수행하면 자동으로 DB에 반영시킨다.
+### urls.py
+웹 애플리케이션의 URL 경로를 정의하는 파일로, 각 URL이 어떤 뷰 함수나 클래스에 연결될지를 결정합니다.
 
-- 마이그레이션 : DB변경사항을 알려주는 정보
+### views.py
+웹 애플리케이션의 비즈니스 로직을 구현하는 파일로, 사용자의 요청을 받아 처리하고, 처리 결과를 템플릿에 전달하여 사용자에게 보여줍니다.
 
----
+### templates
+사용자에게 보여줄 HTML 파일을 저장하는 디렉토리입니다. 각 HTML 파일은 Django 템플릿 언어를 사용하여 동적인 웹 페이지를 생성합니다.
 
-## urls.py
-- app url
-- project url
+### 예시: Bookmark APP
+Django를 이용하여 Bookmark 애플리케이션을 만드는 과정을 간략하게 설명합니다. 이 과정은 Django 프로젝트를 생성하고, 애플리케이션을 생성하여 설정하는 단계, 모델을 정의하고 데이터베이스에 반영하는 단계, 그리고 뷰와 템플릿을 정의하여 사용자 인터페이스를 구현하는 단계로 구성됩니다.
 
----
-
-## views.py
-- Logic을 코딩하는 가장 중요한 파일이다.
-
----
-
-## templates
-
-- 웹 화면 별로 템플릿 파일이 하나씩 필요하며 웹 개발시 여러개의 html 파일을 모아두는 곳
-
- ---
-# Example(예시)
-- 자세한 내용은 적지 않았고 이렇게 만들자 라는 느낌만 적었습니다.
-
-## Bookmark APP 구조 만들기
-
-```
+```bash
 django-admin.py startproject website
 cd website
 vi settings.py
@@ -136,7 +115,7 @@ vi settings.py
 
 - template
 
-```
+```python
 TEMPLATES = [
   'DIRS' : [os.path.join(BASE_DIR,'templates'),]
 ]
@@ -144,45 +123,45 @@ TEMPLATES = [
 
 - static
 
-```
+```python
 STATIC_URL = '/static/'
 STATIC_ROOT = os.path.join(BASE_DIR, 'static')
 ```
 
 - time
 
-```
+```python
 TIME_ZONE = 'Asia/Seoul'
 ```
 
 - media : 업로드 기능
 
-```
+```python
 MEDIA_URL = '/media/'
 MEDIA_ROOT = os.path.join(BASE_DIR, 'media')
 ```
 
 - migrate
 
-```
+```bash
 python manage.py migrate
 ```
 
 - superuser
 
-```
+```bash
 python manage.py createsuperuser
 ```
 
 - app 생성
 
-```
+```bash
 python manage.py startapp bookmark
 ```
 
 - app 등록
 
-```
+```bash
 vi settings.py
 
 INSTALLED_APPS = [
@@ -196,7 +175,7 @@ INSTALLED_APPS = [
 
 - admin.py에 등록하기
 
-```
+```python
 from django.contrib import admin
 from bookmark.models import Bookmark
 
@@ -210,7 +189,7 @@ BookmarkAdmin은 Bookmark 클래스가 admin 사이트에서 어떤 모습으로
 
 - migrate
 
-```
+```python
 python manage.py makemigrations
 python manage.py migrate
 ```
@@ -221,7 +200,7 @@ python manage.py migrate
 
 - urls.py 설정
 
-```
+```python
 from django.contrib import admin
 from django.urls import include, path
 
@@ -235,7 +214,7 @@ urlpatterns = [
 
 - template 설정
 
-```
+```python
 mkdir templates
 cd templates
 mkdir bookmark
