--- a/_posts/2019-06-01-deepsort.md
+++ b/_posts/2019-06-01-deepsort.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Deep Sort"
+title:  "Deep Sort 톺아보기"
 summary: "Deep Sort 코드 읽어보기"
 date:   2019-06-01 12:00 -0400
 categories: paper
