--- a/_posts/2019-07-05-coralusb.md
+++ b/_posts/2019-07-05-coralusb.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coral USB 사용하기"
+title:  "Coral USB 끄적이기"
 summary: "Coral USB를 이용해 모델 돌리기"
 date:   2019-07-05 13:00 -0400
 categories: edge
