--- a/_posts/2019-11-13-DCN.md
+++ b/_posts/2019-11-13-DCN.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "DCN"
+title:  "DCN 톺아보기"
 summary: "Deformable Convolutional Networks 논문 읽어보기"
 date:   2019-11-13 13:00 -0400
 categories: paper
