--- a/_posts/2019-12-20-pep8.md
+++ b/_posts/2019-12-20-pep8.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "딥러닝 학습시키는 시간을 활용해서 Python 알아보기 - 1"
-summary: "Python Coding RULE"
+title:  "PEP8 끄적이기"
+summary: "PEP8 끄적이기"
 date:   2019-12-20 16:00 -0400
-categories: concept
+categories: python
 ---
 
 *파이썬으로 코딩하는 능력을 향상시키기 위해서 이번에 딥러닝 학습시키는 시간을 활용해서?? 공부를 해보려고 한다.*
