--- a/_posts/2020-01-10-PythonC.md
+++ b/_posts/2020-01-10-PythonC.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "딥러닝 학습시키는 시간을 활용해서 Python 알아보기 - 4"
-summary: "Python c언어 연동"
+title:  "Python C 연동 끄적이기"
+summary: "Python c 언어 연동"
 date:   2020-01-10 16:00 -0400
-categories: concept
+categories: python
 ---
 
 파이썬에서 c언어를 연동해서 사용하는 법을 알아보자
