--- a/_posts/2020-11-24-tx2.md
+++ b/_posts/2020-11-24-tx2.md
@@ -1,5 +1,5 @@
 ---
-title:  "tx2를 사용하여 Pytorch 설치 및 실행하기"
+title:  "TX2 끄적이기"
 summary: "tx2를 사용하여 Pytorch 설치 및 실행하기"
 date:   2020-11-24 09:10 -0400
 categories: edge
