Update darknet series

--- a/_posts/2019-02-28-cycleGAN.md
+++ b/_posts/2019-02-28-cycleGAN.md
@@ -3,7 +3,7 @@ layout: post
 title:  "CycleGAN 끄적이기"
 summary: "CycleGAN 코드 살펴보기"
 date:   2019-02-28 09:00 -0400
-categories: gan
+categories: paper
 ---
 
 # CycleGAN
