Update Aliceinwonderland title, Fooocus, Video

--- a/_posts/2024-02-13-Fooocus.md
+++ b/_posts/2024-02-13-Fooocus.md
@@ -21,3 +21,99 @@ Fooocus는 다음과 같이 두 가지 주요 요소를 고려한다.
 둘째, Midjourney는 복잡한 manual tweaking이 필요 없다. 이는 사용자가 이미지 생성 과정에서 불필요한 작업에 시간을 소모하는 것을 방지하고, 대신 이미지와 프롬프트 선택에 집중할 수 있게 한다.
 
 이와 같이 Fooocus는 이미지 생성 소프트웨어의 새로운 가능성을 보여주며, 창작자들에게 더욱 직관적이고 효율적인 방법을 제시하고 있다. 이제는 복잡한 과정 없이 누구나 손쉽게 AI를 활용한 이미지 생성에 참여할 수 있을 것이다.
+
+---
+
+### 설치
+
+Fooocus는 Linux 환경에서 가장 잘 동작한다. 이 가이드는 Linux 사용자를 위한 것이며, GPU가 있는 서버에서 진행하는 것을 권장한다.
+
+### 종속성 설치
+
+먼저, Fooocus 프로젝트를 클론하고 필요한 환경을 설정한다. 아래 명령어를 터미널에 입력!
+
+```bash
+git clone https://github.com/lllyasviel/Fooocus.git
+cd Fooocus
+conda env create -f environment.yaml
+conda activate fooocus
+pip install -r requirements_versions.txt
+```
+
+이 명령어들은 Fooocus를 로컬 환경에 설치하고, 필요한 패키지들을 설치한다.
+
+### Fooocus 실행
+
+이제 Fooocus를 실행해보자. 아래 명령어를 터미널에 입력하면 프로그램이 실행된다. 너무 간단하다!
+
+```bash
+conda activate fooocus
+python entry_with_update.py
+```
+
+### 스타일 선택
+
+Fooocus는 anime 스타일과 realistic 스타일을 지원한다. 원하는 스타일을 선택하여 실행하려면 아래와 같이 입력하자
+
+```bash
+python entry_with_update.py --preset anime
+python entry_with_update.py --preset realistic
+```
+
+이렇게 설정하면 원하는 스타일로 프로그램이 실행된다.
+
+실제로 어떤 스타일을 실행하든 Fooocus를 사용하면서 설정만 잘 고려하신다면 어떤 문제도 없을 것이다.
+
+### 커스텀 모델 실행
+
+보통 Fooocus는 StableDiffusionXL 기반 모델에서 동작을 하는데 내가 원하는 모델을 다운로드 받고 "/models/checkpoints" 에 넣어주면 추후에 모델을 변경해서 사용할 수 있다.
+
+### 사용기
+
+일단 정말 편리하게 되어있어서 크게 뭘 설정할 필요가 없다.
+
+
+
+![1](/assets/img/post_img/fooocus/1.png)
+
+
+
+이게 첫 화면인데 얼마나 심플한가! 아래에 "Input image"와 "Advanced" 체크박스가 있는데 각각 클릭해보면
+
+
+
+![2](/assets/img/post_img/fooocus/2.png)
+
+
+
+"Input image": 사용자 이미지를 입력받아서 커스터마이징 할 수 있다. 크게 "Upscale or Variantion", "Image Prompt", "Inpaint or Outpaint", "Describe" 기능을 제공한다. 직접 사용하면서 해보면 정말 쉽게 습득할 수 있을 것이다. (참고로 Image Prompt 라는 기능에서 "Advanced" 체크박스를 클릭하면 여러가지 조합을 활용해볼 수 있다.)
+
+
+
+![3](/assets/img/post_img/fooocus/3.png)
+
+
+
+"Advanced": 사용자가 생성 방식을 조절 할 수 있다. 크게 "Setting", "Style", "Model", "Advanced" 기능이 있는데 한번 확인하면 바로 바로 알 수 있다. 여기서 이미지 크기 설정, 스타일 설정, 모델 설정을 전부 해볼 수 있다. 일단 실행해보고 클릭하면 바로 알 수 있다!! 개인적으로 Style 기능이 너무 마음에 든다. 미리 Style을 전부 정의를 해놓아서 사용하기도 쉽고 마우스를 대면 샘플을 볼 수 있다.
+
+
+### 후기
+
+Stable Diffusion WebUI와 비교해서 몇가지 내가 실행해보면서 장점을 보면
+
+- 프롬프트 대충적어도 알아서 잘 생성한다.
+- 커스텀 모델을 넣었을 때 정말 성능이 좋다.
+- 스타일 미리 정해준거 너무 좋다.
+- 이미지 크기 미리 정해준거 너무 좋다.
+- 사용하기 너무 쉽다.
+- 속도도 더 빠르다.
+
+
+
+![3](/assets/img/post_img/fooocus/3.png)
+
+
+
+"perfume"만 쳐서 생성한 결과.. 품질이 놀랍다!!
+
+물론 잘 생성하기 위한 팁은 많지만 사용하기 쉽다는 점이 너무 좋다!!
