Update 2025 ai post - video

--- a/_posts/2025-02-09-2025.md
+++ b/_posts/2025-02-09-2025.md
@@ -17,6 +17,13 @@ math: true
 ---
 
 ## 1. 에이전트 AI – 스스로 업무를 처리하는 지능형 비서  
+
+
+
+![1](https://osu-nlp-group.github.io/SeeAct/static/videos/1_walmar_job_github.mp4)
+
+
+
 🔧 **기술 개요**  
 에이전트 AI는 단순한 챗봇을 넘어, 사용자의 반복적인 업무를 스스로 처리하는 스마트 비서입니다.  
 - **핵심 기능**:  
@@ -30,6 +37,18 @@ math: true
 ---
 
 ## 2. 멀티모달 AI – 다양한 데이터를 한 번에 이해하는 종합 지능  
+
+
+
+<iframe width="560" height="315"
+  src="https://youtu.be/UIZAiXYceBI" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+  allowfullscreen>
+</iframe>
+
+
+
 🎨 **기술 개요**  
 멀티모달 AI는 텍스트뿐만 아니라 이미지, 음성, 영상 등 여러 형태의 데이터를 동시에 처리할 수 있는 기술입니다. 이는 마치 인간이 여러 감각을 통해 세상을 인식하듯, AI가 다양한 입력을 종합하여 더 정교한 정보를 도출하도록 합니다.  
 - **핵심 기능**:  
@@ -43,6 +62,19 @@ math: true
 ---
 
 ## 3. 설명 가능한 AI – AI의 판단 과정을 투명하게 공개하는 기술  
+
+
+
+<iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/0Lf7VKEclQM?si=F86bFJPXwKlx0CKn" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+  allowfullscreen>
+</iframe>
+
+
+
 🔍 **기술 개요**  
 설명 가능한 AI는 AI가 어떻게 특정 결정을 내렸는지 그 과정을 명확히 설명해 주는 기술입니다. 기존 AI 시스템은 결과만을 제공했다면, 이 기술은 왜 그 결과가 나왔는지를 해석 가능하게 만들어 사용자에게 신뢰감을 줍니다.  
 - **핵심 기능**:  
