Fix video url in 2025 post

--- a/_posts/2025-02-09-2025.md
+++ b/_posts/2025-02-09-2025.md
@@ -20,7 +20,14 @@ math: true
 
 
 
-![1](https://osu-nlp-group.github.io/SeeAct/static/videos/1_walmar_job_github.mp4)
+<iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/cUsSAxwEs8Y?si=SpSfy9c9QXGGTcKW" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerpolicy="strict-origin-when-cross-origin" 
+  allowfullscreen>
+</iframe>
 
 
 
@@ -40,13 +47,14 @@ math: true
 
 
 
-<iframe width="560" height="315"
-  src="https://youtu.be/UIZAiXYceBI" 
+<iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/lz7rcQUI10c?si=isJgbdZNBNIAQT0H" 
+  title="YouTube video player" 
   frameborder="0" 
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerpolicy="strict-origin-when-cross-origin" 
   allowfullscreen>
 </iframe>
-
 
 
 🎨 **기술 개요**  
