--- a/_posts/2025-02-19-Veo2.md
+++ b/_posts/2025-02-19-Veo2.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: "Veo 2 톺아보기: 최첨단 비디오 생성 AI 모델"  
+title: "Google Veo2 훑어보기"  
 summary: "DeepMind의 혁신적인 비디오 생성 기술 Veo 2"  
 date: 2025-02-18 10:00 -0400  
 categories: paper  
