--- a/_posts/2025-02-03-Deepseek.md
+++ b/_posts/2025-02-03-Deepseek.md
@@ -3,7 +3,7 @@ layout: post
 title:  "DeepSeek에서 DeepSeek 물어보기"
 summary: "중국에서 개발한 LLM 모델"
 date:   2025-02-02 16:00 -0400
-categories: gpt
+categories: AI
 math: true
 ---
 
