--- a/_posts/2025-02-17-Whisk.md
+++ b/_posts/2025-02-17-Whisk.md
@@ -3,7 +3,7 @@ layout: post
 title: "Google Whisk 훑어보기"  
 summary: "최신 고품질 이미지 생성 인공지능 Google Whisk 훑어보기"  
 date: 2025-02-16 16:00 -0400  
-categories: paper  
+categories: AI  
 math: true  
 ---
 
