--- a/_posts/2025-02-18-Veo2.md
+++ b/_posts/2025-02-18-Veo2.md
@@ -3,7 +3,7 @@ layout: post
 title: "Google Veo2 훑어보기"  
 summary: "DeepMind의 혁신적인 비디오 생성 기술 Veo 2"  
 date: 2025-02-17 10:00 -0400  
-categories: paper  
+categories: AI  
 math: true  
 ---
 
