Update deepseek post

--- a/_posts/2025-02-21-Grok3.md
+++ b/_posts/2025-02-21-Grok3.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "🚀 Grok 3: 차세대 AI 모델의 도약"
+title: "Grok 3: 차세대 AI 모델의 도약"
 summary: "xAI가 개발한 최신 LLM, Grok 3의 기술적 혁신과 성능 분석"
 date: 2025-02-19 16:00 -0400
 categories: AI
 math: true
 ---
 
-## 🚀 Grok 3: 차세대 AI 모델의 도약
+##  **Grok 3: 차세대 AI 모델의 도약**
 
 > **"우주의 본질을 이해하는 것"** – xAI의 미션
 
