--- a/_posts/2025-02-25-birefnet.md
+++ b/_posts/2025-02-25-birefnet.md
@@ -7,7 +7,7 @@ categories: paper
 math: true
 ---
 
-## 🚀 BiRefNet: 고해상도 이미지 세분화를 위한 최첨단 AI 모델
+## **BiRefNet: 고해상도 이미지 세분화를 위한 최첨단 AI 모델**
 
 - 📖 논문: [https://arxiv.org/abs/2401.03407v6](https://arxiv.org/abs/2401.03407v6)  
 - 🖥️ 깃허브: [https://github.com/ZhengPeng7/BiRefNet](https://github.com/ZhengPeng7/BiRefNet)  
