Update Youtube post

--- a/_posts/2025-03-02-Youtube.md
+++ b/_posts/2025-03-02-Youtube.md
@@ -11,19 +11,8 @@ math: true
 
 ![유튜브 숏츠 성장 전략](https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/YouTube_social_white_square_%282017%29.svg/220px-YouTube_social_white_square_%282017%29.svg.png)
 
-유튜브는 사용자의 취향과 행동 패턴을 분석하여 가장 적합한 콘텐츠를 추천하는 정교한 알고리즘을 운영합니다. 이 글에서는 유튜브 알고리즘의 핵심 원리와 숏츠(Shorts)를 포함한 유튜브 영상의 성공 전략을 정리했습니다.
-
-## 📌 목차
-- [유튜브 알고리즘 이해하기](#🎯-유튜브-알고리즘-이해하기)
-- [핵심 전략 5가지](#🔥-핵심-전략-5가지)
-  - [1. 시청 지속 시간 늘리기](#1️⃣-시청-지속-시간-늘리기)
-  - [2. 썸네일과 제목 최적화](#2️⃣-썸네일과-제목-최적화)
-  - [3. 추천 알고리즘 활용하기](#3️⃣-추천-알고리즘-활용하기)
-  - [4. 효과적인 업로드 전략](#4️⃣-효과적인-업로드-전략)
-  - [5. 커뮤니티 활용과 시청자 소통](#5️⃣-커뮤니티-활용과-시청자-소통)
-- [성공을 위한 3가지 핵심 요소](#🚀-성공을-위한-3가지-핵심-요소)
-- [자주 묻는 질문](#❓-자주-묻는-질문)
-- [구글 내부자가 전하는 유튜브 알고리즘 비밀](#🎯-구글-내부자가-전하는-유튜브-알고리즘-비밀)
+유튜브는 사용자의 취향과 행동 패턴을 분석하여 가장 적합한 콘텐츠를 추천하는 정교한 알고리즘을 운영합니다.   
+이 글에서는 유튜브 알고리즘의 핵심 원리와 숏츠(Shorts)를 포함한 유튜브 영상의 성공 전략을 정리했습니다.
 
 ---
 
