Fix system2 post - author, image

--- a/_posts/2025-03-01-system2.md
+++ b/_posts/2025-03-01-system2.md
@@ -10,7 +10,7 @@ math: true
 ## 🚀 왜 '생각하는 AI'가 필요한가?
 
 > **논문 요약:** [“From System 1 to System 2: A Survey of Reasoning Large Language Models”](https://arxiv.org/abs/2502.17419v2)  
-> **저자:** Microsoft Research, OpenAI, Google DeepMind  
+> **저자:** Zhong-Zhi Li and Duzhen Zhang and Ming-Liang Zhang and Jiaxin Zhang and Zengyan Liu and Yuxuan Yao and Haotian Xu and Junhao Zheng and Pei-Jie Wang and Xiuyi Chen and Yingying Zhang and Fei Yin and Jiahua Dong and Zhijiang Guo and Le Song and Cheng-Lin Liu  
 > **발표:** 2025년 2월  
 
 최근 인기 있는 ChatGPT, Claude, Gemini 같은 대형 언어 모델(LLM)은 뛰어난 언어 능력을 보여줍니다. 하지만 이들 모델은 주로 ‘직관적 패턴 매칭’에 의존하여 텍스트를 생성한다는 점에서 아직 **복잡한 논리적 사고**나 **다단계 추론** 능력은 부족하다고 평가됩니다.
@@ -113,7 +113,7 @@ math: true
 
 
 
-![향후 연구 방향](/assets/img/post_img/system2/3.PNG)
+![향후 연구 방향](/assets/img/post_img/system2/3.png)
 
 
 
@@ -147,7 +147,11 @@ math: true
 
 
 
-![마무리](/assets/img/post_img/system2/4.PNG)
+
+
+![마무리](/assets/img/post_img/system2/4.png)
+
+
 
 
 
