--- a/_posts/2025-03-13-SparkTTS.md
+++ b/_posts/2025-03-13-SparkTTS.md
@@ -3,7 +3,7 @@ layout: post
 title: "Spark-TTS: 인공지능이 당신의 목소리를 만드는 방법"
 summary: "Spark-TTS는 인공지능으로 더 자연스럽고 다양한 목소리를 만드는 혁신적인 기술입니다. 복잡한 기술을 단순화해 더 효율적으로 텍스트를 음성으로 변환합니다."
 date: 2025-03-13
-categories: tech
+categories: paper
 ---
 
 
