--- a/_posts/2025-03-24-MCP.md
+++ b/_posts/2025-03-24-MCP.md
@@ -7,6 +7,8 @@ categories: AI
 math: true  
 ---
 
+> 해당 블로그 글은 Anthropic 웹사이트의 공식 문서를 참고하여 작성되었습니다.
+
 ## 모델 컨텍스트 프로토콜(MCP): AI와 데이터를 연결하는 혁신적인 표준 가이드
 
 
