Update GPT4o Image Generation Post

--- a/_posts/2025-03-25-DiffSEQ.md
+++ b/_posts/2025-03-25-DiffSEQ.md
@@ -3,7 +3,7 @@ layout: post
 title: "DiffuSeq: 확산 모델을 활용한 시퀀스-투-시퀀스 텍스트 생성의 혁신"  
 summary: "GPT를 능가하는 다양성과 품질! 확산 모델을 텍스트 생성에 처음 적용한 DiffuSeq 기술 심층 분석 - 대화 생성부터 텍스트 단순화까지 텍스트 생성의 새로운 패러다임"  
 date: 2025-03-25  
-categories: paper deep-learning nlp generative-ai diffusion-models
+categories: paper 
 math: true  
 ---
 
